# olheiro-desktop

./: .gitignore  README.md  assistente_estudo.py  backend_server.py  build_exe.bat  index.html  package-lock.json  package.json  requirements.txt  run.bat  vite.config.ts
config/: __init__.py  paths.py  prompts.py  providers.py  settings.py  theme.py
models/: __init__.py  capture.py  course.py
scripts/: ensure_tesseract.ps1
services/: __init__.py  browser_service.py  capture_service.py  clipboard_service.py  course_service.py  export_service.py  hotkey_service.py  ocr_service.py  scroll_service.py
src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: olheiro_256.rgba
src-tauri/src/: lib.rs  main.rs
ui/: __init__.py  app.py  components.py
utils/: __init__.py  image_utils.py  platform_utils.py
