[package]
name = "olheiro"
version = "0.4.0"
description = "Olheiro desktop shell"
authors = ["Olheiro"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "olheiro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell"] }
